centralizacion con enu los valores de estados de la orden y platillos
